feat: create some device endpoints
